add spectral normalization for vgcrl

--- a/notebooks/braxlines/experiment_sweep.ipynb
+++ b/notebooks/braxlines/experiment_sweep.ipynb
@@ -2,20 +2,17 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "ssCOanHc8JH_"
-      },
       "source": [
         "# Sweep Training\n",
         "\n",
         "We can perform hyperparameter sweep directly on Colab."
-      ]
+      ],
+      "metadata": {
+        "id": "ssCOanHc8JH_"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "VYe1kc3a4Oxc"
-      },
       "source": [
         "\n",
         "\n",
@@ -24,19 +21,18 @@
         "```\n",
         "\n",
         "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/google/brax/blob/main/experimental/braxlines/notebooks/vgcrl.ipynb)"
-      ]
+      ],
+      "metadata": {
+        "id": "VYe1kc3a4Oxc"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "rlVNS8JstMRr"
-      },
-      "outputs": [],
       "source": [
         "#@title Colab setup and imports\n",
         "#@markdown ## ⚠️ PLEASE NOTE:\n",
-        "#@markdown This colab runs best using a TPU runtime.  From the Colab menu, choose Runtime \u003e Change Runtime Type, then select **'TPU'** in the dropdown.\n",
+        "#@markdown This colab runs best using a TPU runtime.  From the Colab menu, choose Runtime > Change Runtime Type, then select **'TPU'** in the dropdown.\n",
         "\n",
         "#@markdown See [config_utils.py](https://github.com/google/brax/blob/main/brax/experimental/braxlines/common/config_utils.py)\n",
         "#@markdown for the configuration format.\n",
@@ -77,6 +73,7 @@
         "      algo_name = ['gcrl', 'diayn'],\n",
         "      seed = [0],\n",
         "      normalize_obs_for_disc = [False],\n",
+        "      spectral_norm = [True],\n",
         "      ppo_params = dict(\n",
         "        num_timesteps=int(2e8),\n",
         "        reward_scaling=10,\n",
@@ -96,7 +93,7 @@
         "\n",
         "prefix_keys = config_utils.list_keys_to_expand(config)\n",
         "for c, p in zip(config, prefix_keys):\n",
-        "  c.update(dict(prefix_keys=p)) \n",
+        "  c.update(dict(prefix_keys=p))\n",
         "config_count= config_utils.count_configuration(config)\n",
         "start_count= max(start_count, 0)\n",
         "end_count = min(end_count, sum(config_count))\n",
@@ -105,15 +102,15 @@
         "print(f'Set start_count={start_count}, end_count={end_count}')\n",
         "print(f'Set prefix_keys={prefix_keys}')\n",
         "print(f'Set output_dir={output_path}')"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "rlVNS8JstMRr"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "NaJDZqhCLovU"
-      },
-      "outputs": [],
       "source": [
         "#@title Launch experiments\n",
         "\n",
@@ -135,7 +132,11 @@
         "    train.train(c, output_dir=output_dir, return_dict=return_dict)\n",
         "  except Error as e:\n",
         "    print(f'[{i+1}/{sum(config_count)}] FAILED experiment {e}')"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "NaJDZqhCLovU"
+      }
     }
   ],
   "metadata": {
@@ -168,5 +169,5 @@
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 0
+  "nbformat_minor": 2
 }
