--- a/notebooks/braxlines/vgcrl.ipynb
+++ b/notebooks/braxlines/vgcrl.ipynb
@@ -2,9 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "ssCOanHc8JH_"
-      },
       "source": [
         "# Training Goal-Conditioned and Unsupervised RL Agents in Brax\n",
         "\n",
@@ -13,13 +10,13 @@
         "This provides a bare bone implementation based on minimal modifications to the\n",
         "baseline [PPO](https://github.com/google/brax/blob/main/brax/training/ppo.py),\n",
         "enabling training in a few minutes. More features, tunings, and benchmarked results will be added soon."
-      ]
+      ],
+      "metadata": {
+        "id": "ssCOanHc8JH_"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "VYe1kc3a4Oxc"
-      },
       "source": [
         "\n",
         "\n",
@@ -28,19 +25,18 @@
         "```\n",
         "\n",
         "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/google/brax/blob/main/experimental/braxlines/notebooks/vgcrl.ipynb)"
-      ]
+      ],
+      "metadata": {
+        "id": "VYe1kc3a4Oxc"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "rlVNS8JstMRr"
-      },
-      "outputs": [],
       "source": [
         "#@title Colab setup and imports\n",
         "#@markdown ## ⚠️ PLEASE NOTE:\n",
-        "#@markdown This colab runs best using a TPU runtime.  From the Colab menu, choose Runtime \u003e Change Runtime Type, then select **'TPU'** in the dropdown.\n",
+        "#@markdown This colab runs best using a TPU runtime.  From the Colab menu, choose Runtime > Change Runtime Type, then select **'TPU'** in the dropdown.\n",
         "\n",
         "from datetime import datetime\n",
         "import functools\n",
@@ -70,15 +66,15 @@
         "if \"COLAB_TPU_ADDR\" in os.environ:\n",
         "  from jax.tools import colab_tpu\n",
         "  colab_tpu.setup_tpu()"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "rlVNS8JstMRr"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "gh4QsRPnX770"
-      },
-      "outputs": [],
       "source": [
         "#@title Define experiment parameters\n",
         "\n",
@@ -118,6 +114,7 @@
         "normalize_obs_for_disc = False  # @param {'type': 'boolean'}\n",
         "seed =   0# @param {type: 'integer'}\n",
         "diayn_num_skills = 8  # @param {type: 'integer'}\n",
+        "spectral_norm = True  # @param {type: 'boolean'}\n",
         "output_path = None  # @param {'type': 'raw'}\n",
         "output_path = output_path.format(\n",
         "    date=datetime.now().strftime('%Y%m%d'),\n",
@@ -125,15 +122,15 @@
         "    env_scale=env_scale,\n",
         "    env_name=env_name,\n",
         "    algo_name=algo_name) if output_path else None"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "gh4QsRPnX770"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "NaJDZqhCLovU"
-      },
-      "outputs": [],
       "source": [
         "# @title Visualizing Brax environments\n",
         "# Create baseline environment to get observation specs\n",
@@ -147,7 +144,8 @@
         "                   obs_indices=obs_indices,\n",
         "                   scale=env_scale,\n",
         "                   diayn_num_skills = diayn_num_skills,\n",
-        "                   logits_clip_range=logits_clip_range)\n",
+        "                   logits_clip_range=logits_clip_range,\n",
+        "                   spectral_norm=spectral_norm)\n",
         "disc = disc_fn(env=base_env, normalize_obs=normalize_obs_for_disc)\n",
         "extra_params = disc.init_model(rng=jax.random.PRNGKey(seed=seed))\n",
         "env_fn = vgcrl_utils.create_fn(env_name=env_name, disc=disc)\n",
@@ -158,15 +156,15 @@
         "state = jit_env_reset(rng=jax.random.PRNGKey(seed=seed))\n",
         "clear_output()  # clear out jax.lax warning before rendering\n",
         "HTML(html.render(env.sys, [state.qp]))"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "NaJDZqhCLovU"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "4vgMSWODfyMC"
-      },
-      "outputs": [],
       "source": [
         "#@title Training\n",
         "num_timesteps_multiplier = 4  # @param {type: 'integer'}\n",
@@ -217,7 +215,7 @@
         "    plotdata[key]['x'] += [num_steps]\n",
         "    plotdata[key]['y'] += [v]\n",
         "  # the first step does not include losses\n",
-        "  if num_steps \u003e 0:\n",
+        "  if num_steps > 0:\n",
         "    tab.add(num_steps=num_steps, **metrics)\n",
         "    tab.dump()\n",
         "  clear_output(wait=True)\n",
@@ -239,15 +237,15 @@
         "\n",
         "print(f'time to jit: {times[1] - times[0]}')\n",
         "print(f'time to train: {times[-1] - times[1]}')"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "4vgMSWODfyMC"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "RNMLEyaTspEM"
-      },
-      "outputs": [],
       "source": [
         "#@title Visualizing a trajectory of the learned inference function\n",
         "#@markdown If `z_value` is `None`, sample `z`, else fix `z` to `z_value`.\n",
@@ -274,15 +272,15 @@
         "    output_name=f'video_z_{z_value}',\n",
         ")\n",
         "HTML(html.render(env.sys, [state.qp for state in states]))"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "RNMLEyaTspEM"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "p5eWOxg7RmQQ"
-      },
-      "outputs": [],
       "source": [
         "#@title Visualizing skills of the learned inference function in 2D plot\n",
         "num_samples_per_z = 5  # @param {type: 'integer'}\n",
@@ -304,7 +302,11 @@
         "    time_last_n=time_last_n,\n",
         "    seed=eval_seed)\n",
         "plt.show()"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "p5eWOxg7RmQQ"
+      }
     }
   ],
   "metadata": {
@@ -333,5 +335,5 @@
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 0
+  "nbformat_minor": 2
 }
